--- a/stylesheets/base/_color.scss
+++ b/stylesheets/base/_color.scss
@@ -23,3 +23,7 @@ $white-250: rgba(255, 255, 255, 0.25);
 $white-100: rgba(255, 255, 255, 0.1);
 
 $shadow: rgba(40, 40, 40, 0.7);
+
+$transparent: rgba(0, 0, 0, 0);
+
+$class-bg: #ececec;
