--- a/stylesheets/css/footer.css
+++ b/stylesheets/css/footer.css
@@ -1,29 +1,39 @@
-@import url("https://fonts.googleapis.com/css?family=Do+Hyeon");
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700");
-@font-face { font-family: 'oACYCZno'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/oACYCZno.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'Lachata'; src: url("../../font/Lachata.ttf.eot") format("embedded-opentype"); src: url("../../font/Lachata.ttf.eot?#iefix") format("embedded-opentype"), url("../../font/Lachata.ttf.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'OTEnjoystoriesBA'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff") format("woff"); font-weight: normal; font-style: normal; }
-html { font-size: 10px; }
+@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
+@import url("https://fonts.googleapis.com/css?family=Teko:600");
+@font-face { font-family: 'TmonMonsori'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff") format("woff"); font-weight: normal; font-style: normal; }
+html { font-size: 12px; }
 
 body { width: 100%; overflow-x: hidden; }
 
-.footer { margin-top: 16rem; width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-top: 3%; padding-bottom: 3%; background-color: #1338d1; }
-.footer .footer-logo { width: 6%; }
-.footer .footer-logo img { width: 100%; }
-.footer .footer-sns { margin-top: 3rem; height: 8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; }
-.footer .footer-sns .sns-tab { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; width: 10rem; position: relative; }
-.footer .footer-sns .sns-tab .sns-tab__icon { width: 4rem; height: 4rem; cursor: pointer; }
-.footer .footer-sns .sns-tab .sns-tab__tooltip { position: relative; width: 7rem; padding: 7% 0; color: white; font-family: 'Do Hyeon'; font-size: 1.4rem; letter-spacing: 0.1rem; text-align: center; background-color: #ff5059; border-radius: 0.5rem; opacity: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; margin-top: 0.3rem; }
-.footer .footer-sns .sns-tab .sns-tab__tooltip:before { content: ''; width: 0.6rem; height: 0.6rem; display: block; border-top: 10px solid #ff5059; border-left: 10px solid #ff5059; border-radius: 0.5rem; -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg); position: absolute; top: -0.5rem; }
-.footer .footer-rights { text-align: center; color: white; font-size: 1.2rem; font-family: 'oACYCZno'; }
+.img-filter { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(43, 43, 43, 0.3); }
 
-@media screen and (min-width: 320px) and (max-width: 767px) { .footer { margin-top: 8rem; padding-top: 7%; padding-bottom: 7%; }
-  .footer .footer-logo { width: 18%; }
-  .footer .footer-sns { height: 6rem; }
-  .footer .footer-sns .sns-tab { width: 7rem; }
-  .footer .footer-sns .sns-tab .sns-tab__icon { width: 3rem; height: 3rem; }
-  .footer .footer-sns .sns-tab .sns-tab__tooltip { font-size: 1.2rem; margin-top: 0.3rem; }
-  .footer .footer-sns .sns-tab .sns-tab__tooltip:before { width: 0.2rem; height: 0.2rem; }
-  .footer .footer-rights { font-size: 0.9rem; } }
+.footer { width: 100%; position: relative; margin-top: 15vw; }
+.footer .footer-insta { width: 100%; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.footer .footer-insta .insta-part { width: 60vw; display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; }
+.footer .footer-insta .insta-part .insta-tab { position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; overflow: hidden; }
+.footer .footer-insta .insta-part .insta-tab:hover img { -webkit-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05); }
+.footer .footer-insta .insta-part .insta-tab img { width: 100%; height: auto; position: relative; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.footer .footer-insta .insta-part .insta-tab span { position: absolute; color: white; font-family: 'NanumSquare', sans-serif; font-size: 1.35rem; border: 1px solid white; padding: 1.5rem 4rem; border-radius: 5rem; text-align: center; bottom: 0; margin-bottom: 2rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.footer .footer-insta .insta-part .insta-tab span:hover { background-color: white; color: #2ac6ff; }
+.footer .footer-insta .insta-part .insta-tab.pic1 { width: 40vw; height: 40vw; }
+.footer .footer-insta .insta-part .insta-tab.pic2 { width: 40vw; height: 20vw; }
+.footer .footer-insta .insta-part .insta-tab.pic3 { width: 20vw; height: 20vw; }
+.footer .footer-insta .insta-part .pic3-wrapper { width: 20vw; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; position: relative; overflow: hidden; }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3 { width: 20vw; height: 20vw; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; overflow: hidden; }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3:hover img { -webkit-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05); }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3 img { width: 100%; position: relative; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3 span { position: absolute; color: white; font-family: 'NanumSquare', sans-serif; font-size: 1.35rem; border: 1px solid white; padding: 1.5rem 4rem; border-radius: 5rem; text-align: center; bottom: 0; margin-bottom: 2rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3 span:hover { background-color: white; color: #2ac6ff; }
+.footer .footer-insta .insta-part.small { width: 40vw; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+.footer .footer-info { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-top: 3%; padding-bottom: 2%; background-color: #2ac6ff; }
+.footer .footer-info .footer-logo { width: 6%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.footer .footer-info .footer-logo img { width: 100%; }
+.footer .footer-info .footer-logo img:nth-of-type(1) { margin-bottom: 1.5rem; }
+.footer .footer-info .footer-sns { margin-top: 3rem; height: 8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+.footer .footer-info .footer-sns .sns-tab { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 9rem; position: relative; }
+.footer .footer-info .footer-sns .sns-tab .sns-tab__icon { width: 3.5rem; height: 3.5rem; cursor: pointer; }
+.footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip { position: relative; width: 7rem; padding: 7% 0; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.15rem; font-weight: 800; letter-spacing: 0.1rem; text-align: center; background-color: #f7ff5a; border-radius: 0.5rem; opacity: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-top: 0.3rem; }
+.footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip:before { content: ''; width: 0.6rem; height: 0.6rem; display: block; border-top: 10px solid #f7ff5a; border-left: 10px solid #f7ff5a; border-radius: 0.5rem; -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg); position: absolute; top: -0.5rem; }
+.footer .footer-info .footer-rights { text-align: center; color: white; font-size: 1.15rem; font-family: 'NanumSquare', sans-serif; }
 
 /*# sourceMappingURL=footer.css.map */
