--- a/stylesheets/css/location.css
+++ b/stylesheets/css/location.css
@@ -1,8 +1,135 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700");
 @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
-@font-face { font-family: 'Lachata'; src: url("../../font/Lachata.ttf.eot") format("embedded-opentype"); src: url("../../font/Lachata.ttf.eot?#iefix") format("embedded-opentype"), url("../../font/Lachata.ttf.woff") format("woff"); font-weight: normal; font-style: normal; }
-html { font-size: 12px; }
+@import url("https://fonts.googleapis.com/css?family=Teko:600");
+@font-face { font-family: 'TmonMonsori'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff") format("woff"); font-weight: normal; font-style: normal; }
+@-webkit-keyframes slide-main-appear { 0% { -webkit-transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes slide-main-appear { 0% { -moz-transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes slide-main-appear { 0% { transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes slide-sub-appear { 0% { -webkit-transform: translate(20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes slide-sub-appear { 0% { -moz-transform: translate(20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes slide-sub-appear { 0% { transform: translate(20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes dir-appear { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes dir-appear { 0% { -moz-transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes dir-appear { 0% { transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes dir-icon-appear { 0% { -webkit-transform: translate(0, 20px) rotate(180deg); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0) rotate(180deg); opacity: 1; } }
+@-moz-keyframes dir-icon-appear { 0% { -moz-transform: translate(0, 20px) rotate(180deg); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0) rotate(180deg); opacity: 1; } }
+@keyframes dir-icon-appear { 0% { transform: translate(0, 20px) rotate(180deg); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0) rotate(180deg); opacity: 1; } }
+@-webkit-keyframes dir-line { 0% { -webkit-transform: translate(0, 100%); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes dir-line { 0% { -moz-transform: translate(0, 100%); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes dir-line { 0% { transform: translate(0, 100%); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes letter-appear { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes letter-appear { 0% { -moz-transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes letter-appear { 0% { transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes rental-slide { 0% { opacity: 0; }
+  100% { opacity: 1; } }
+@-moz-keyframes rental-slide { 0% { opacity: 0; }
+  100% { opacity: 1; } }
+@keyframes rental-slide { 0% { opacity: 0; }
+  100% { opacity: 1; } }
+@-webkit-keyframes rental-slide-letter { 0% { -webkit-transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes rental-slide-letter { 0% { -moz-transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes rental-slide-letter { 0% { transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+html { font-size: 12px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; text-rendering: optimizeLegibility; }
 
 body { width: 100%; overflow-x: hidden; }
+
+.header .gnb .gnb-list .gnb-tab:nth-of-type(1) a span { color: #2ac6ff; }
+.header .gnb .gnb-list .gnb-tab:nth-of-type(1):hover a span { color: white; }
+
+.jumbotron { width: 100%; height: 24rem; overflow: hidden; position: relative; }
+.jumbotron .jumbotron-img { width: 100%; height: 100%; position: relative; overflow: hidden; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.jumbotron .jumbotron-img img { width: 100%; }
+.jumbotron .jumbotron-img:after { content: ''; width: 100%; height: 100%; background-color: rgba(43, 43, 43, 0.7); position: absolute; top: 0; left: 0; }
+.jumbotron .jumbotron-title { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.jumbotron .jumbotron-title img { height: 3.2rem; width: auto; }
+.jumbotron .jumbotron-title p { font-size: 2rem; color: white; font-family: 'NanumSquare', sans-serif; text-align: center; width: 40%; margin-top: 1.5rem; word-break: keep-all; }
+
+.container { width: 100%; position: relative; margin-top: 5rem; }
+.container .container-title { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.container .container-title .title-line { width: 1px; height: 8rem; background-color: #2b2b2b; }
+.container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; }
+.container .container-title .description { text-align: center; width: 40%; font-family: 'NanumSquare', sans-serif; color: #2b2b2b; font-size: 1.2rem; line-height: 1.8; word-break: keep-all; }
+.container .container-title .button { margin-top: 2.5rem; background-color: #f7ff5a; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.6rem; line-height: 1; font-weight: 700; padding: 1.5rem 5rem; border-radius: 5rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-title .button:hover { -webkit-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); }
+.container .container-content { width: 100%; position: relative; }
+.container .container-content .location-warpper { width: 100%; height: 50rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.container .container-content .location-warpper .location-map { width: calc((100% / 6) * 4); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; overflow: hidden; }
+.container .container-content .location-warpper .location-map img { width: 100%; }
+.container .container-content .location-warpper .location-tab-wrapper { width: calc((100% / 6) * 2); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; background-color: #2b2b2b; }
+.container .container-content .location-warpper .location-tab-wrapper .location-tab-desc { width: 100%; height: 44%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 10%; color: white; font-family: 'NanumSquare', sans-serif; }
+.container .container-content .location-warpper .location-tab-wrapper .location-tab-desc .tab-desc__title { width: 100%; font-size: 2rem; font-weight: 700; }
+.container .container-content .location-warpper .location-tab-wrapper .location-tab-desc .tab-desc__desc { width: 100%; font-size: 1.2rem; line-height: 1.5; margin-top: 2rem; word-break: keep-all; }
+.container .container-content .location-warpper .location-tab-wrapper .location-tab { width: 100%; height: 14%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; border-top: 1px solid #606060; }
+.container .container-content .location-warpper .location-tab-wrapper .location-tab img { height: 2.2rem; width: auto; }
+.container .container-content .location-warpper .location-tab-wrapper .location-tab p { width: 100%; font-family: 'NanumSquare', sans-serif; color: white; font-size: 1.2rem; margin-left: 1.2rem; word-break: keep-all; }
+.container .container-content .introduce-wrapper { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; position: relative; }
+.container .container-content .introduce-wrapper .introduce-part { width: 100%; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.container .container-content .introduce-wrapper .introduce-part:nth-of-type(1) { -webkit-transform: translate(0, 0); -ms-transform: translate(0, 0); transform: translate(0, 0); }
+.container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) { -webkit-transform: translate(0, -4rem); -ms-transform: translate(0, -4rem); transform: translate(0, -4rem); }
+.container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg .desc-text { -webkit-transform: translate(2rem, 0); -ms-transform: translate(2rem, 0); transform: translate(2rem, 0); text-align: right; }
+.container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg .desc-text .desc-text__desc { margin-left: 20%; }
+.container .container-content .introduce-wrapper .introduce-part:nth-of-type(3) { -webkit-transform: translate(0, -8rem); -ms-transform: translate(0, -8rem); transform: translate(0, -8rem); }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__img { width: calc((100% / 6) * 4); height: 40rem; overflow: hidden; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__img img { width: 100%; }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__desc { width: calc((100% / 6) * 2); height: 40rem; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg { position: relative; width: 50%; height: 20rem; background-color: #f7ff5a; }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg .desc-text { width: 100%; position: absolute; top: 0; left: 0; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; -webkit-transform: translate(-2rem, 0); -ms-transform: translate(-2rem, 0); transform: translate(-2rem, 0); }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg .desc-text .desc-text__title { font-size: 2rem; line-height: 1.5; word-break: keep-all; width: 100%; margin-top: 2.5rem; }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg .desc-text .desc-text__desc { width: 80%; font-size: 1.2rem; line-height: 1.8; margin-top: 2rem; word-break: keep-all; word-wrap: break-word; }
+.container .container-content .gallery-wrapper { width: 100%; position: relative; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; }
+.container .container-content .gallery-wrapper .gallery-tab-list { width: 100%; margin-top: 3rem; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab { width: 20vw; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: flex-start; -ms-flex-align: flex-start; align-items: flex-start; }
+.container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab:nth-of-type(2) { -webkit-transform: translate(0, 11rem); -ms-transform: translate(0, 11rem); transform: translate(0, 11rem); }
+.container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab:nth-of-type(3) { -webkit-transform: translate(0, 5rem); -ms-transform: translate(0, 5rem); transform: translate(0, 5rem); }
+.container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab .gallery-tab__img { width: 100%; height: 35rem; overflow: hidden; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+.container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab .gallery-tab__img img { height: 100%; }
+.container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab .gallery-tab__date { width: 100%; margin-top: 2rem; font-family: 'NanumSquare', sans-serif; color: #2b2b2b; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab .gallery-tab__date .date-num { font-size: 1.2rem; margin-left: 2rem; }
+.container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab .gallery-tab__date .date-line { width: 4rem; height: 1px; background-color: #2b2b2b; margin-left: 1rem; }
+.container .container-content .gallery-wrapper .gallery-dir { width: 14rem; display: -webkit-box; display: -ms-flexbox; display: flex; float: right; }
+.container .container-content .gallery-wrapper .gallery-dir .gallery-dir__tab { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 50%; }
+.container .container-content .gallery-wrapper .gallery-dir .gallery-dir__tab img { height: 5rem; cursor: pointer; }
+.container .container-content .gallery-wrapper .gallery-dir .gallery-dir__tab.prev img { -webkit-transform: rotate(180deg); -ms-transform: rotate(180deg); transform: rotate(180deg); }
 
 /*# sourceMappingURL=location.css.map */
